namespace java com.heepay.rpc.boss.model

struct BillingClearModel{
   
    1: string merchantNo;
	2: string transNo;
	3: string  merchantId;
	4: string  requestAmount;
    5: string payAmount;
    6: string bankcardType;
    7: string cardholderGender; 
    8: string channelCode;
    9: string channelTransType;
    10: string bankCode;
    11: string requestStatus;
    12: string requestIp;
    13: string provinceId;
    14: string requestTime;
    15: string payFinishTime;
    16: string settlePart;
    17: string  bankId;
    18: string bankShortName;
    19: string productCode;
    20: string productNumber;
    21: string  productDescription;
    22: string settleAmount;
    23: string settleStatus;
    24: string createPerson;
    25: string createTime;
    26: string updatePerson;
    27: string updateTime;
    28: string channleNo;
    29: string feeAmount;
    
   

    

    
}